update admin formData and swagger
